--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Upload files to S3
         run: |
-           aws s3 sync aws/ s3://${{ secrets.S3_BUCKET }}/kshyxxz-20 \
+           aws s3 sync aws/ s3://${{ secrets.S3_BUCKET }}/kshyxxz \
             --delete \
             --exclude ".git/*" \
             --exclude ".github/*"
